src/test/ui/infinite-recursion-const-fn.stderr
error[E0080]: constant evaluation error
  --> $DIR/infinite-recursion-const-fn.rs:14:25
   |
LL | const fn a() -> usize { b() } //~ ERROR constant evaluation error
   |                         ^^^
   |                         |
   |                         reached the configured maximum number of stack frames
   |                         inside call to `b`
LL | const fn b() -> usize { a() }
   |                         ---
   |                         |
   |                         inside call to `a`
   |                         inside call to `a`
   |                         inside call to `a`
   |                         inside call to `a`
   |                         inside call to `a`
   |                         inside call to `a`
   |                         inside call to `a`
   |                         inside call to `a`
   |                         inside call to `a`
   |                         inside call to `a`
   |                         inside call to `a`
   |                         inside call to `a`
   |                         inside call to `a`
   |                         inside call to `a`
   |                         inside call to `a`
   |                         inside call to `a`
   |                         inside call to `a`
   |                         inside call to `a`
   |                         inside call to `a`
   |                         inside call to `a`
   |                         inside call to `a`
   |                         inside call to `a`
   |                         inside call to `a`
   |                         inside call to `a`
   |                         inside call to `a`
   |                         inside call to `a`
   |                         inside call to `a`
   |                         inside call to `a`
   |                         inside call to `a`
   |                         inside call to `a`
   |                         inside call to `a`
   |                         inside call to `a`
   |                         inside call to `a`
   |                         inside call to `a`
   |                         inside call to `a`
   |                         inside call to `a`
   |                         inside call to `a`
   |                         inside call to `a`
   |                         inside call to `a`
   |                         inside call to `a`
   |                         inside call to `a`
   |                         inside call to `a`
   |                         inside call to `a`
   |                         inside call to `a`
   |                         inside call to `a`
   |                         inside call to `a`
   |                         inside call to `a`
   |                         inside call to `a`
   |                         inside call to `a`
LL | const ARR: [i32; a()] = [5; 6];
   |                  --- inside call to `a`
   |
note: for constant expression here
  --> $DIR/infinite-recursion-const-fn.rs:16:1
   |
LL | const ARR: [i32; a()] = [5; 6];
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0080"
